# skidl-tools

./: .gitattributes  .gitmodules  README.md
examples/pmod_leds/: board1.kicad_pcb  board1.py  board2.kicad_pcb  board2.py  board2_edit.kicad_pcb  board3.kicad_pcb  board3.py  board3_edit.kicad_pcb  board4.kicad_pcb  board4.py  board4_edit.kicad_pcb
updater/: CMakeLists.txt  main.cpp
